fix: revert .content align-items to flex-start to avoid mobile centering bug

--- a/src/banner/banner.module.css
+++ b/src/banner/banner.module.css
@@ -32,7 +32,7 @@
 
 .content {
     padding: var(--reactist-spacing-large);
-    align-items: center;
+    align-items: flex-start;
 }
 
 .title,
@@ -64,7 +64,6 @@
 }
 
 .icon {
-    align-self: flex-start;
     padding-top: calc(var(--reactist-spacing-xsmall) / 2);
 }
 
